--- a/templates/admin/setting/edit.html.twig
+++ b/templates/admin/setting/edit.html.twig
@@ -1,12 +1,22 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}Edit GrrSetting{% endblock %}
+{% block title %}{{ 'settings.title'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit GrrSetting</h1>
 
-    {{ include('@grr_admin/setting/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ 'settings.title'|trans }}</h3>
+        </div>
+        <div class="card-body">
+            {{ include('@grr_admin/setting/_form.html.twig') }}
+        </div>
+    </div>
 
-    <a href="{{ path('grr_admin_setting_index') }}">back to list</a>
+    <a href="{{ path('grr_admin_setting_index') }}"><i
+                class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({},'actions') }}</a>
 
+{% endblock %}
+{% block scripts %}
+    <script src="{{ asset('js/add-collection-widget.js') }}"></script>
 {% endblock %}
