--- a/templates/admin/setting/index.html.twig
+++ b/templates/admin/setting/index.html.twig
@@ -1,31 +1,50 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}GrrSetting index{% endblock %}
+{% block title %}{{ 'settings.title'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'settings.title'|trans }}</h1>
-
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Value</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for setting in settings %}
-            <tr>
-                <td>
-                    <a href="{{ path('grr_admin_setting_show', {'id': setting.id}) }}">{{ setting.name }}</a>
-                    </td>
-                <td>{{ setting.value }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-8">
+                    <h3>{{ 'settings.title'|trans }}</h3>
+                </div>
+                <div class="col-4">
+                    <a class="float-right btn btn-primary" href="{{ path('grr_admin_setting_edit') }}">
+                        <i class="far fa-edit"></i> {{ 'setting.edit.title'| trans({}, 'actions') }}</a>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Value</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for setting in settings %}
+                    <tr>
+                        <td>
+                            {{ setting.name }}
+                        </td>
+                        <td>
+                            {% if setting.value is iterable %}
+                                {{ setting.value|join(',') }}
+                            {% else %}
+                                {{ setting.value }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="3">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
