--- a/templates/admin/_menu_admin.html.twig
+++ b/templates/admin/_menu_admin.html.twig
@@ -12,7 +12,7 @@
 {% if is_granted(constant('App\\Security\\SecurityRole::ROLE_GRR_ADMINISTRATOR')) %}
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-           aria-expanded="false">{{ 'menu.settings'|trans({}, 'actions') }}</a>
+           aria-expanded="false" title="{{ 'menu.settings'|trans({}, 'actions') }}"> <i class="fas fa-ellipsis-v"></i></a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item"
                href="{{ path('grr_admin_type_entry_index') }}">{{ 'menu.reservation.type'|trans({}, 'actions') }}</a>
