--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,8 +24,27 @@
 
 {% block body %}
     <div class="text-center">
+
+        <div class="w-75 m-auto">
+
+            {% if title %}
+                <h2>{{ title }}</h2>
+            {% endif %}
+
+            {% if compagny %}
+                {{ compagny }}
+            {% endif %}
+
+            {% if message %}
+                <div class="alert alert-info">
+                    {{ message }}
+                </div>
+            {% endif %}
+
+        </div>
+
         <form class="form-signin" method="post" action="{{ path('app_login') }}">
-            <img class="mb-4 img-fluid" title="Grr" src="{{ asset('totem_grr.png') }}" alt="logo" width="72" >
+            <img class="mb-4 img-fluid" title="Grr" src="{{ asset('totem_grr.png') }}" alt="logo" width="72">
             <h1 class="h3 mb-3 font-weight-normal">{{ 'login.title'|trans() }}</h1>
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -48,7 +67,7 @@
                    value="{{ csrf_token('authenticate') }}"
             >
             <button class="btn btn-lg btn-primary btn-block"
-                    type="submit">{{ 'btn.login'|trans() }}</button>
+                    type="submit"><i class="fas fa-sign-in-alt"></i> {{ 'btn.login'|trans() }}</button>
         </form>
     </div>
     {#
