--- a/templates/front/layout_front.html.twig
+++ b/templates/front/layout_front.html.twig
@@ -2,7 +2,7 @@
 
 {% block brand %}
     <a class="navbar-brand" href="{{ path('grr_home') }}" title="Accueil">
-        <i class="fas fa-home"></i> Grr </a>
+        <i class="fas fa-home"></i> {{ grrCompanyName() }} </a>
 {% endblock %}
 
 {% block menu_top %}
