--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,12 +1,12 @@
 <header class="row">
 
-    <div class="col-2">
+    <div class="col-lg-2">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-5">
+    <div class="col-lg-5">
         {{ grrMonthNavigationRender() }}
     </div>
-    <div class="col-5">
+    <div class="col-lg-5">
 
     </div>
 
