--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,12 +1,12 @@
 <header class="row">
 
-    <div class="col-lg-2">
+    <div class="col-md-2 col-12">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-lg-5">
+    <div class="col-md-5 col-12">
         {{ grrMonthNavigationRender() }}
     </div>
-    <div class="col-lg-5">
+    <div class="col-md-5 col-12">
 
     </div>
 
