--- a/templates/front/navigation/form/_area_form.html.twig
+++ b/templates/front/navigation/form/_area_form.html.twig
@@ -1,3 +1,4 @@
 {{ form_start(form) }}
 {{ form_row(form.area, {label_attr: {class: 'checkbox-custom'} }) }}
+{{ form_row(form.room) }}
 {{ form_end(form) }}
