--- a/templates/front/navigation/month/_month_by_weeks.html.twig
+++ b/templates/front/navigation/month/_month_by_weeks.html.twig
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-responsive-sm">
+<table class="table table-bordered table-responsive-sm table-responsive-md">
     <thead>
     <tr>
         <th scope="col" class="text-center" colspan="8">
