--- a/templates/front/navigation/month/_calendar_navigation.html.twig
+++ b/templates/front/navigation/month/_calendar_navigation.html.twig
@@ -1,16 +1,9 @@
-<table class="table">
-    <tr>
-        <td>{{ navigation.previousButton | raw }}</td>
 
         {% for month in navigation.months %}
-            <td>{{ month | raw }}</td>
+          {{ month | raw }}
         {% endfor %}
 
-        <td>
-            {{ navigation.nextButton | raw }}
-        </td>
-    </tr>
-</table>
+
 {#
 <div class="row">
     <div class="col col-2 col-sm-2">
