--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,9 +1,9 @@
 <header class="row">
 
-    <div class="col-md-2 c2ol-lg-12 col-12">
+    <div class="col-md-2 col-lg-12 col-12">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-md-5 co2l-12">
+    <div class="col-md-5 col-12">
         {{ grrMonthNavigationRender() }}
     </div>
 
