--- a/templates/front/navigation/month/_month_by_weeks.html.twig
+++ b/templates/front/navigation/month/_month_by_weeks.html.twig
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="row m2t-2">
-    <table class="table table-bordered table-responsive-sm table-responsive-md tabl2e-sm">
+    <table class="table table-bordered table-responsive-sm table-responsive-md table-sm">
         <thead>
         <tr>
             <th class="text-center">{{ 'week'|trans }}</th>
