--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,3 +9,11 @@ label.required:after {
 body {
     padding-top: 4rem;
 }
+
+[class*="col"], footer, aside {
+  background-color: lightblue;
+  border: 1px solid blue;
+  border-radius: 4px;
+  line-height: 40px;
+  text-align: center;
+}
