--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,9 +1,9 @@
 <header class="row">
 
-    <div class="col-md-2 col-lg-2 col-12">
+    <div class="col-12 col-lg-2">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-md-5 col-lg-5 col-12">
+    <div class="col-12 col-lg-5">
         {{ grrMonthNavigationRender() }}
     </div>
 
