--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,9 +1,9 @@
 <header class="row">
 
-    <div class="col-12 col-lg-2">
+    <div class="col-12">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-12 col-lg-5">
+    <div class="col-12">
         {{ grrMonthNavigationRender() }}
     </div>
 
