--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,10 +1,10 @@
-<header class="row">
+<div class="row">
 
-    <div class="col-12">
+    <div class="col-lg-2">
         {{ grrMenuNavigationRender() }}
     </div>
-    <div class="col-12">
+    <div class="col-lg-5">
         {{ grrMonthNavigationRender() }}
     </div>
 
-</header>
+</div>
