--- a/templates/_menu_user.html.twig
+++ b/templates/_menu_user.html.twig
@@ -1,11 +1,12 @@
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
        aria-expanded="false">{{ app.user.email }}</a>
-    <div class="dropdown-menu" aria-labelledby="dropdown01">
-        <a class="dropdown-item"
-           href="{{ path('grr_account_show') }}"><i class="fas fa-users-cog"></i> {{ 'menu.user.account'|trans() }}</a>
-        <a href="{{ path('app_logout') }}" class="dropdown-item" title="{{ 'menu.user.logout'|trans }}"><i
-                    class="fas fa-sign-out-alt"></i> {{ 'menu.user.logout'|trans() }}</a>
-
+    <div class="dropdown-menu" aria-labelledby="dropdown04">
+        <a class="dropdown-item" href="{{ path('grr_account_show') }}">
+            <i class="fas fa-users-cog"></i> {{ 'menu.user.account'|trans() }}
+        </a>
+        <a href="{{ path('app_logout') }}" class="dropdown-item" title="{{ 'menu.user.logout'|trans }}">
+            <i class="fas fa-sign-out-alt"></i> {{ 'menu.user.logout'|trans() }}
+        </a>
     </div>
 </li>
