--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,21 +20,20 @@
     {% block head_scripts %}{% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top border-bottom shadow-sm">
+{# MENU TOP #}
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     {% block brand %}
         <a class="navbar-brand" href="{{ path('grr_home') }}">Grr</a>
     {% endblock %}
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsleDefault"
-            aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
+            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-md-center" id="navbarsDefault">
-        <ul class="navbar-nav mr-auto ml-auto">
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+        <ul class="navbar-nav mr-auto">
             {% block menu_top %}
             {% endblock %}
-        </ul>
-        <ul class="navbar-nav">
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 {% block menu_user %}
                     {% include '_menu_user.html.twig' %}
@@ -46,9 +45,12 @@
                 </li>
             {% endif %}
         </ul>
+        <form class="form-inline my-2 my-md-0">
+            <input class="form-control" type="text" placeholder="Search">
+        </form>
     </div>
 </nav>
-
+{# END MENU TOP #}
 <main role="main" class="container-fluid pt-3">
 
     {% include '_flash_messages.html.twig' %}
