--- a/templates/default/vide.html.twig
+++ b/templates/default/vide.html.twig
@@ -1,6 +1,11 @@
 {% extends '@grr_front/layout_front.html.twig' %}
 
 {% block body %}
-Cette page est vide
+    Cette page est vide
+
+{{ include('default/_table1.html.twig') }}
+{{ include('default/_table2.html.twig') }}
+{{ include('default/_table3.html.twig') }}
+{{ include('default/_table4.html.twig') }}
 {% endblock %}
 
