--- a/templates/default/_table3.html.twig
+++ b/templates/default/_table3.html.twig
@@ -1,14 +1,14 @@
 <table class="table table-bordered table-sm">
     <thead>
     <tr>
-        <th class="text-center">Semaine</th>
-        <th scope="col" class="text-center">Lundi</th>
-        <th scope="col" class="text-center">Mardi</th>
-        <th scope="col" class="text-center">Mercredi</th>
-        <th scope="col" class="text-center">Jeudi</th>
-        <th scope="col" class="text-center">Vendredi</th>
-        <th scope="col" class="text-center">Samedi</th>
-        <th scope="col" class="text-center">Dimanche</th>
+        <th class="text-center">S</th>
+        <th scope="col" class="text-center">Lun</th>
+        <th scope="col" class="text-center">Mar</th>
+        <th scope="col" class="text-center">Mer</th>
+        <th scope="col" class="text-center">Jeu</th>
+        <th scope="col" class="text-center">Ven</th>
+        <th scope="col" class="text-center">Sam</th>
+        <th scope="col" class="text-center">Dim</th>
     </tr>
     </thead>
     <tbody>
