--- a/templates/default/_table1.html.twig
+++ b/templates/default/_table1.html.twig
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-responsive-sm table-responsive-md">
+<table class="table table-bordered table-responsive-sm table-responsive-md table-sm">
     <thead>
     <tr>
         <th class="text-center">Semaine</th>
