--- a/templates/front/periodicity/_show.html.twig
+++ b/templates/front/periodicity/_show.html.twig
@@ -29,6 +29,7 @@
     <br/>
     <h5>{{ 'periodicity.repeats.title'|trans }}</h5>
     {% for repeat in repeats %}
-        <span class="text-muted">{{ repeat.startTime |date('d-m-Y H:i') }}</span>
+        <span class="text-muted">{{ repeat.startTime | format_datetime('full', 'short') }}</span>
+        <br/>
     {% endfor %}
 {% endif %}
