--- a/templates/front/month/_calendar_data.html.twig
+++ b/templates/front/month/_calendar_data.html.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 <div class="row">
     {% for dayName in listDays %}
-        <div class="col table-bordered borde2r-info">{{ dayName|trans }}</div>
+        <div class="col table-bordered text-center font-weight-bold">{{ dayName|trans }}</div>
     {% endfor %}
 </div>
 
