--- a/templates/front/month/_entry_line.html.twig
+++ b/templates/front/month/_entry_line.html.twig
@@ -1,24 +1,26 @@
-<div class="card bg-light w-100 m-1">
-    <div class="card-header">
-        <h6>
-            <a class="card-link" href="{{ path('grr_front_entry_show', {'id': entry.id}) }}">
-                {{ entry.name }}
-            </a>
-        </h6>
-    </div>
-    <div class="card-body">
-        <div class="row">
-            <div class="col-10">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    {{ entry.startTime|date('H:i') }}
-                    - {{ entry.endtime|date('H:i') }}</h6>
-                <p class="card-text">
-                    <strong>{{ entry.room }}</strong><br/>
-                </p>
-            </div>
-            <div class="col-2">
-                <div style="background-color: {{ entry.type.color }}">&nbsp;</div>
-            </div>
+<div class="border2 p-2 mb-1">
+    <a class="" href="{{ path('grr_front_entry_show', {'id': entry.id}) }}">
+        {{ entry.name }}
+    </a>
+    {% if entry.description %}
+        <br />
+        {# sf5 | u.truncate(20, '...') #}
+        <span class="text-muted">{{ entry.description }}</span>
+    {% endif %}
+    <div class="row">
+        <div class="col-10">
+             <span class="m2b-2 text-muted">
+    {{ entry.startTime|date('H:i') }}
+    - {{ entry.endtime|date('H:i') }}
+             </span>
+            <br/>
+            <span class="font-weight-bold">
+                {{ entry.room }}
+            </span>
+        </div>
+        <div class="col-2">
+            <div style="background-color: {{ entry.type.color }}">&nbsp;</div>
         </div>
     </div>
 </div>
+<hr style="margin: 0;">
