--- a/templates/email/welcome.html.twig
+++ b/templates/email/welcome.html.twig
@@ -1,4 +1,4 @@
-{% apply inky_to_html|inline_css(source('@css/foundation-emails.css'),source('@css/bootstrap.min.css')) %}
+{% apply inky_to_html|inline_css(source('@css/foundation-emails.css'),source('@css/email.css')) %}
     <container>
         <row class="header">
             <columns>
