--- a/templates/admin/default/index.html.twig
+++ b/templates/admin/default/index.html.twig
@@ -3,7 +3,24 @@
 {% block title %}Grr admin{% endblock %}
 
 {% block body %}
-    <h3>Grr admin</h3>
+    <h3>{{ 'grr.title'|trans }} </h3>
 
-    <img src="{{ asset('totem_grr.png') }}" alt="grr">
+    <div class="row">
+        <div class="col-3">
+            <img src="{{ asset('images/totem_grr.png') }}" alt="grr" class="thumbnail">
+        </div>
+        <div class="col-4">
+            <ul class="list-group mt-5">
+                <li class="list-group-item"><a
+                            href="{{ path('grr_admin_user_index') }}">{{ 'user.manage.title'|trans }}</a></li>
+                <li class="list-group-item"><a
+                            href="{{ path('grr_admin_area_index') }}">{{ 'area.manage.title'|trans }}</a></li>
+                <li class="list-group-item"><a
+                            href="{{ path('grr_admin_setting_index') }}">{{ 'setting.manage.title'|trans }}</a></li>
+                <li class="list-group-item"><a
+                            href="{{ path('grr_admin_type_entry_index') }}">{{ 'typeEntry.manage.title'|trans }}</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 {% endblock %}
