--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
             {% endif %}
         </ul>
         <form class="form-inline my-2 my-md-0">
-            <input class="form-control" type="text" placeholder="Search">
+          <!--  <input class="form-control" type="text" placeholder="Search"> -->
         </form>
     </div>
 </nav>
