--- a/templates/default/errors/error.html.twig
+++ b/templates/default/errors/error.html.twig
@@ -15,7 +15,7 @@
                 We will fix it as soon as possible. Sorry for any inconvenience caused.
             </p>
 
-            <img src="{{ asset('totem_grr.png') }}" alt="grr">
+            <img src="{{ asset('images/totem_grr.png') }}" alt="grr">
         </div>
     </div>
 
