--- a/templates/default/errors/error403.html.twig
+++ b/templates/default/errors/error403.html.twig
@@ -13,7 +13,7 @@
                 No access.
             </p>
 
-            <img src="{{ asset('totem_grr.png') }}" alt="grr">
+            <img src="{{ asset('images/totem_grr.png') }}" alt="grr">
         </div>
     </div>
 
