--- a/templates/default/errors/error404.html.twig
+++ b/templates/default/errors/error404.html.twig
@@ -13,7 +13,7 @@
                 <a href="{{ path('grr_home') }}">Go back to home</a>
             </p>
 
-            <img src="{{ asset('totem_grr.png') }}" alt="grr">
+            <img src="{{ asset('images/totem_grr.png') }}" alt="grr">
         </div>
     </div>
 {% endblock %}
