--- a/templates/admin/user/edit_password.html.twig
+++ b/templates/admin/user/edit_password.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ user.email }}</h3>
+            <h3>{{ 'user.changepassword.title'|trans }} {{ user.email }}</h3>
         </div>
         <div class="card-body">
             {{ form_start(form) }}
