--- a/templates/default/errors/error404.html.twig
+++ b/templates/default/errors/error404.html.twig
@@ -10,7 +10,7 @@
         <div class="card-body">
 
             <p>
-                <a href="{{ path('grr_home') }}">Go back to home</a>
+                <a href="{{ path('grr_home') }}">{{'return.homepage'|trans}}</a>
             </p>
 
             <img src="{{ asset('images/totem_grr.png') }}" alt="grr">
