--- a/templates/admin/default/index.html.twig
+++ b/templates/admin/default/index.html.twig
@@ -11,15 +11,19 @@
         </div>
         <div class="col-4">
             <ul class="list-group mt-5">
-                <li class="list-group-item"><a
-                            href="{{ path('grr_admin_user_index') }}">{{ 'user.manage.title'|trans }}</a></li>
+                {% if is_granted(constant('App\\Security\\SecurityRole::ROLE_GRR_MANAGER_USER')) %}
+                    <li class="list-group-item"><a
+                                href="{{ path('grr_admin_user_index') }}">{{ 'user.manage.title'|trans }}</a></li>
+                {% endif %}
                 <li class="list-group-item"><a
                             href="{{ path('grr_admin_area_index') }}">{{ 'area.manage.title'|trans }}</a></li>
-                <li class="list-group-item"><a
-                            href="{{ path('grr_admin_setting_index') }}">{{ 'setting.manage.title'|trans }}</a></li>
-                <li class="list-group-item"><a
-                            href="{{ path('grr_admin_type_entry_index') }}">{{ 'typeEntry.manage.title'|trans }}</a>
-                </li>
+                {% if is_granted(constant('App\\Security\\SecurityRole::ROLE_GRR_ADMINISTRATOR')) %}
+                    <li class="list-group-item"><a
+                                href="{{ path('grr_admin_setting_index') }}">{{ 'setting.manage.title'|trans }}</a></li>
+                    <li class="list-group-item"><a
+                                href="{{ path('grr_admin_type_entry_index') }}">{{ 'typeEntry.manage.title'|trans }}</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
