--- a/templates/front/month/_calendar_data.html.twig
+++ b/templates/front/month/_calendar_data.html.twig
@@ -1,19 +1,23 @@
-<div class="container-fluid">
-<div class="row">
-    {% for dayName in listDays %}
-        <div class="col table-bordered text-center font-weight-bold">{{ dayName|trans }}</div>
-    {% endfor %}
-</div>
-
-{% for week in weeks %}
-    <div class="row">
-        {% for day in week.days %}
-            <div class="col border">
-                {% include '@grr_front/month/_cell_day_data.html.twig' %}
-            </div>
+<div class="table-responsive">
+    <table class="table table-bordered table-sm">
+    <thead>
+    <tr>
+        {% for dayName in listDays %}
+            <th scope="col">{{ dayName|trans }}</th>
         {% endfor %}
-    </div>
-{% endfor %}
+    </tr>
+    </thead>
+    <tbody>
+    {% for week in weeks %}
+        <tr>
+            {% for day in week.days %}
+                <td class="align-text-top">
+                    {% include '@grr_front/month/_cell_day_data.html.twig' %}
+                </td>
+            {% endfor %}
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
 </div>
-
 {{ grrLegendEntryType(area) }}
