--- a/templates/front/month/_entry_line.html.twig
+++ b/templates/front/month/_entry_line.html.twig
@@ -19,7 +19,7 @@
             </span>
         </div>
         <div class="col-2">
-            <div style="background-color: {{ entry.type.color }}">&nbsp;</div>
+            <div style="background-color: {{ entry.type.color }}"><span class="sr-only">{{ entry.type.name }}</span>&nbsp;</div>
         </div>
     </div>
 </div>
