--- a/templates/front/month/_entry_line.html.twig
+++ b/templates/front/month/_entry_line.html.twig
@@ -8,7 +8,7 @@
         <span class="text-muted">{{ entry.description }}</span>
     {% endif %}
     <div class="row">
-        <div class="col-10">
+        <div class="col-lg-10">
              <span class="m2b-2 text-muted">
     {{ entry.startTime|date('H:i') }}
     - {{ entry.endtime|date('H:i') }}
@@ -18,7 +18,7 @@
                 {{ entry.room }}
             </span>
         </div>
-        <div class="col-2">
+        <div class="col-lg-2">
             <div style="background-color: {{ entry.type.color }}"><span class="sr-only">{{ entry.type.name }}</span>&nbsp;</div>
         </div>
     </div>
