--- a/templates/front/_menu_front.html.twig
+++ b/templates/front/_menu_front.html.twig
@@ -1,9 +1,12 @@
+<!--
 <li class="nav-item active">
     <a class="nav-link" href="{{ path('grr_home') }}">{{ 'menu.home'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
-</li><!--
+</li>
 <li class="nav-item">
     <a class="nav-link" href="{{ path('grr_front_entry_index') }}">{{ 'menu.search'|trans({}, 'actions') }}</a>
 </li>-->
-<li class="nav-item">
-    <a class="nav-link" href="{{ path('grr_admin_index') }}">{{ 'menu.administration'|trans({}, 'actions') }}</a>
-</li>
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('grr_admin_index') }}">{{ 'menu.administration'|trans({}, 'actions') }}</a>
+    </li>
+{% endif %}
