--- a/templates/front/monthly/month.html.twig
+++ b/templates/front/monthly/month.html.twig
@@ -11,7 +11,8 @@
         {{ area }} - {% if room %} {{ room }} {% else %} {{ 'room.all'|trans({},'actions') }} {% endif %}
     </h3>
 
-    {{ data|raw }}
+    {{ monthData|raw }}
+
 {% endblock %}
 
 {% block scripts %}
