--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,12 +16,13 @@
 
     <script src="https://kit.fontawesome.com/50e40e2735.js" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     {% block head_scripts %}{% endblock %}
 </head>
 <body>
 {# MENU TOP #}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+
     {% block brand %}
         <a class="navbar-brand" href="{{ path('grr_home') }}">Grr</a>
     {% endblock %}
@@ -29,25 +30,28 @@
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarsExample04">
-        <ul class="navbar-nav mr-auto">
-            {% block menu_top %}
-            {% endblock %}
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                {% block menu_user %}
-                    {% include '_menu_user.html.twig' %}
+    <div class="container">
+        <div class="collapse navbar-collapse" id="navbarsExample04">
+            <ul class="navbar-nav mr-auto">
+                {% block menu_top %}
                 {% endblock %}
-            {% else %}
-                <li class="nav-item">
-                    <a href="{{ path('app_login') }}" class="nav-link" title="{{ 'menu.user.login'|trans }}"><i
-                                class="fas fa-sign-in-alt"></i></a>
-                </li>
-            {% endif %}
-        </ul>
-        <form class="form-inline my-2 my-md-0">
-          <!--  <input class="form-control" type="text" placeholder="Search"> -->
-        </form>
+            </ul>
+            <ul class="navbar-nav">
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% block menu_user %}
+                        {% include '_menu_user.html.twig' %}
+                    {% endblock %}
+                {% else %}
+                    <li class="nav-item">
+                        <a href="{{ path('app_login') }}" class="nav-link" title="{{ 'menu.user.login'|trans }}"><i
+                                    class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                {% endif %}
+            </ul>
+            <form class="form-inline my-2 my-md-0">
+             <!--   <input class="form-control" type="text" placeholder="{{ 'search.placeholder'|trans }}"> -->
+            </form>
+        </div>
     </div>
 </nav>
 {# END MENU TOP #}
