--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,7 +39,7 @@
                    placeholder="{{ 'login.form.username.placeholder'|trans }}" required autofocus>
             <label for="inputPassword"
                    class="sr-only">{{ 'login.form.password.label'|trans() }}</label>
-            <input name="password" type="password" id="inputPassword" class="form-control"
+            <input name="password" type="password" id="inputPassword" class="form-control mt-2"
                    placeholder="{{ 'login.form.password.placeholder'|trans() }}" required>
             <div class="checkbox mb-3">
                 <label>
