--- a/templates/front/monthly/_entry_line.html.twig
+++ b/templates/front/monthly/_entry_line.html.twig
@@ -5,7 +5,7 @@
     {% if entry.description %}
         <br/>
         {# sf5 | u.truncate(20, '...') #}
-        <span class="text-muted">{{ entry.description|slice(1, 2) }}</span>
+        <span class="text-muted">{{ entry.description|slice(1, 20) }}</span>
     {% endif %}
     <div class="row">
         <div class="col-md-10 col-12">
@@ -18,9 +18,8 @@
                 {{ entry.room }}
             </span>
         </div>
-        <div class="col-md-2 d-none d-sm-block">
-            <div style="background-color: {{ entry.type.color }}"><span class="sr-only">{{ entry.type.name }}</span>&nbsp;
-            </div>
+        <div class="col-md-2 d-none d-sm-block" style="background-color: {{ entry.type.color }}">
+            <span class="sr-only">{{ entry.type.name }}</span>&nbsp;&nbsp;
         </div>
     </div>
 </div>
