--- a/templates/front/_legend_entry_type.html.twig
+++ b/templates/front/_legend_entry_type.html.twig
@@ -1,7 +1,14 @@
 <div class="d-none d-sm-block"><!-- hide smartphone -->
-    <ul class="mt-5 list-group list-group-horizontal-sm">
+    <div class="row">
         {% for type in types %}
-            <li class="list-group-item" style="background-color: {{ type.color }}">{{ type.name }}</li>
+            <div class="col-lg-2 col-4" style="background-color: {{ type.color }}">
+                {{ type.name }}
+            </div>
         {% endfor %}
-    </ul>
+        {# <ul class="mt-5 list-group list-group-horizontal-sm">
+
+          <li class="list-group-item" style="background-color: {{ type.color }}">{{ type.name }}</li>
+
+         </ul>#}
+    </div>
 </div>
